# tigine

./: .gitignore  Array.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Makefile  README.md  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  api.hpp  glad.c  glad.h  main.cpp  math.hpp  render.cpp
data/: plane.mtl
data/sponza/: sponza.mtl
glsl/: anim.vs  depth.fs  gbuffer.fs  gbuffer.vs  light.fs  plain-color.fs  plain-color.vs  quad.vs  shadow-anim.vs  shadow.vs  shadowDebug.fs  ssao-blur.fs  ssao.fs  test.fs  test.vs  tone-mapping.fs
imgui/: imconfig.h  imgui_impl_glfw_gl3.cpp
